config/acp-workload/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
    app.kubernetes.io/name: orka
    app.kubernetes.io/managed-by: kustomize
  name: api
  namespace: system
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: orka
